# nycitibike_data_pipeline

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  docker-requirements.txt  el_parent_flow-deployment.yaml  prefect.yaml  pyproject.toml  requirements.txt
alternative_docs/: conda_unused_environment.yml
docker/: .dockerignore  Dockerfile
prefect/: el_for_hire_vehicle_rides.py  el_from_citibike_to_gcs.py  el_parent_flow-deployment.yaml  el_parent_flow-deploymentxxxxxx.yaml  el_trips_parent_flow-deployment.yaml
terraform/: main.tf  terraform.tfvars  variables.tf
